--- a/.config
+++ b/.config
@@ -66,6 +66,7 @@ CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_ip6tables=y
@@ -174,6 +175,7 @@ CONFIG_PACKAGE_nginx-ssl=y
 CONFIG_PACKAGE_nginx-ssl-util=y
 CONFIG_PACKAGE_nginx-util=y
 CONFIG_PACKAGE_node=y
+CONFIG_PACKAGE_ntfs-3g=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
