--- a/.config
+++ b/.config
@@ -64,7 +64,7 @@ CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_coreutils-nohup=y
+# CONFIG_PACKAGE_coreutils-nohup is not set
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_fuse-utils=y
