--- a/.config
+++ b/.config
@@ -67,7 +67,7 @@ CONFIG_PACKAGE_chinadns-ng=y
 # CONFIG_PACKAGE_coreutils-nohup is not set
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_fuse-utils=y
+# CONFIG_PACKAGE_fuse-utils is not set
 CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
